@@ -1,3 +1,11 @@
+2005-07-26  Chia I Wu  <b90201047@ntu.edu.tw>
+
+	* src/core/font.cpp: Use FC_PIXEL_SIZE when opening font by pixel
+	height.
+	Use XftFontOpenPattern so that we don't have to match the pattern
+	every time.
+	s/XFT_/FC_/ and s/XftType/FcType/ where suitable.
+
 2005-07-26  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>
 
 	* src/view/telnetview.cpp:
